Nuevo diseño con logo central

--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,77 @@ body{
     all: unset;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
-}
-header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: teal;
-    padding: .3em .3em;
-}
-img{
-    width: 1.5em;
+    background-color: black;
+    /* background: url(../img/nine.jpg) no-repeat center center fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover; */
 }
 
+/*LOGO + NAVEGADOR + NOMBRE*/
+/* header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 10em;
+    z-index: 3;
+
+}
+
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 5em;
+    width: 6em;
+
+}
 .nav-link{
-    all:unset;
+    font-size: 1em;
+    font-family:monospace ;
+    text-decoration: none;
+    color: white;
 }
+.nav-link:hover{
+    font-size: 1.5em;
+}
+
 main{
-    background-color: tomato;
+    width: 100vw;
     height: 100vh;
+    background-color: chocolate;
+    z-index: 3;
 }
-footer{
-    background-color: blueviolet;
-    height: 6em;
+
+*/
+#logo{
+    width: 3em;
+    margin: 0 1em;
 }
+#logo:hover{
+    cursor: pointer;
+}
+#container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.texto{
+    font-size: 1em;
+    color: whitesmoke;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.texto:hover{
+    color:aquamarine;
+    cursor: pointer;
+}
+
+
