--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,9 @@ nav{
     animation-iteration-count: infinite;
     animation-timing-function: cubic-bezier(1, 0.2, 0.2, 1);
 }
+.icosBig{
+    font-size: 5em;
+}
 @keyframes arrowDownAnimation {
     from {margin-top: 0em;}
     to{margin-top: 10em;}
@@ -100,6 +103,7 @@ nav{
 .secciones{
     all: unset;
     display: flex;
+    align-items: center;
     flex-direction: column;
     padding: 10em 0;
     width: 100%;
@@ -136,24 +140,13 @@ p{
 }
 
 /* ABOUT ME */
-#containerAboutMe{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 #containerText{
     width: 80%;
     font-size: 13vw;
     font-weight: 200;
 }
 
-/* STUFF*/
-#containerKnowledge{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
+/* KNOWLEDGE Y TECNOLOGIAS */
 .containerBoxes{
     display: flex;
     flex-wrap: wrap;
@@ -172,14 +165,32 @@ p{
     font-size: 1em;
     font-weight: 200;  
 }
+
+.inBoxes{
+    padding: 3em 2em;
+    border-radius: 1em;
+    font-weight: 300;
+}
 .tituloBoxes{
     font-size: 1em;
     font-weight: 400;
     margin-bottom: 2em;
 }
-#center{
+.center{
     width: 20em;
     margin: 0 3em 5em;
+}
+
+/* FOTOGRAFIA */
+#pic{
+    all: unset;
+    width: 100%;
+    overflow: hidden;
+}
+#pic img{
+    width: 140%;
+    margin-left: -15%;
+    margin-bottom: -1em;
 }
 @media (max-width: 40em){
     nav{
