--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ nav{
     justify-content: center;
     align-items: center;
     width: 60%;
-    height: 100%;
+
 }
 .nameTitle{
     font-size: 15vw;
@@ -286,7 +286,7 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
 }
 #mainContainer{
@@ -353,7 +353,8 @@ main{
 #galleryContainer{
     display: flex;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+    width: 80%;
 }
 .column {
     display: flex;
@@ -437,3 +438,17 @@ main{
    } 
 .prev {
     left: .3em;}
+
+
+.imgBoxProyectos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20em;
+    
+}
+
+.imgProyectos{
+    width: 80%;
+    height: auto;
+}
