--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,6 @@ nav{
     transform: rotate(1turn);
     transition: 1s;
 }
-.fa-book-open{
-    animation-name: ;
-    margin-bottom: 4em;
-}
 
 /* REGLA DE LAS SECCIONES */
 .secciones{
@@ -259,11 +255,9 @@ p{
         transform: rotate(1turn);
         transition: 1s;
     }
-        /*GALERIA*/
-        .mySlides {height: auto; width: auto; max-height: 100%; max-width: 100vw; margin: 0 auto;} 
-        .videos {width: 100%; max-width: 100%; height: 65vh; min-height: 300px; padding: 30px 0;}
-        .column {margin: 0; padding: 0;}
-        .seccion2 {margin: 50px 0;}
+    /*GALERIA*/
+    .mySlides {height: auto; width: auto; max-height: 100%; max-width: 100vw;} 
+    .column {margin: 0; padding: 0;}
 }
 
 /*         CONTACT           */ 
@@ -273,8 +267,8 @@ p{
     flex-direction: row;
     justify-content: center;
     padding: .8em 1em;
-    height: 10vh;
-    width: 80%;
+    height: 6em;
+    width: 100%;
 }
 .titlePage{
     font-size: 3em;
@@ -309,7 +303,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 90%;
+    height: 30em;
     width: 80%;
 }
 
@@ -354,7 +348,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
 }
 .column {
     display: flex;
@@ -373,11 +367,11 @@ main{
 #myModal{
     display: none;
     justify-content: center;
-    overflow: hidden;
 }
 .mySlides {
     display: none;
-    width: 80vh;
+    max-width: 80vh;
+    max-height: 100vh;
 }
 /*CAJA GALERIA*/
 .modal {
@@ -386,7 +380,8 @@ main{
     z-index: 3;
     top:0;
     left:0;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     background-color: black;
     align-items: center;}
 .forma{
@@ -423,7 +418,7 @@ main{
     background-color:rgba(100, 100, 100, .3);
     color: blanchedalmond;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.2em;
     transition: 0.6s ease;
     border-radius:.2em;
     user-select: none;
@@ -444,11 +439,22 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20em;
-    
+    width: 90%;
+    height: 20em;
+}
+.imgBoxProyectos a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imgProyectos{
     width: 80%;
     height: auto;
+    border-radius: 1em;
+}
+
+.imgProyectos:hover{
+    filter: brightness(110%);
+    transition: .8s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
